Update branding from MathInMotion to AlgoVisuals

--- a/index.html
+++ b/index.html
@@ -3,23 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MathInMotion - Professional Mathematical Animation Services</title>
+    <title>AlgoVisuals- Professional Mathematical Animation Services</title>
     <meta name="description" content="Transform mathematical concepts into elegant animated visualizations. Professional Manim animations for research, education, and content creation. Get custom quotes." />
-    <meta name="author" content="MathInMotion" />
+    <meta name="author" content="AlgoVisuals" />
     <meta name="keywords" content="mathematical animation, manim, formula visualization, research videos, math animation services" />
 
-    <meta property="og:title" content="MathInMotion - Mathematical Animation Services" />
+    <meta property="og:title" content="AlgoVisuals - Mathematical Animation Services" />
     <meta property="og:description" content="Professional mathematical animations for research, education, and content creation. Transform your formulas into elegant visualizations." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:image" content="https://www.algovisuals.org/placeholder.svg" />
+  <meta property="og:site_name" content="AlgoVisuals" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="twitter:image" content="https://www.algovisuals.org/placeholder.svg" />
+
+    <link rel="icon" href="/favicon.ico" sizes="any" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="canonical" href="https://www.algovisuals.org/" />
   </head>
 
   <body>
     <div id="root"></div>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "url": "https://www.algovisuals.org/",
+        "name": "AlgoVisuals",
+        "logo": "https://www.algovisuals.org/favicon.ico",
+        
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "url": "https://www.algovisuals.org/",
+        "name": "AlgoVisuals",
+        "alternateName": "AlgoVisuals"
+      }
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
